fix mvc issues
