# app/controllers/api/v1/circuits_controller.rb
@@ -1,12 +1,13 @@
 
 class Api::V1::CircuitsController < ApplicationController
-    # before_action :authenticate_user!
-    before_action :set_circuit, only: %i[ show edit update destroy ]
+    before_action :authenticate_user!
+    before_action :set_circuit, only: %i[ show update destroy ]
     respond_to :json
 
     # GET /circuits or /circuits.json
     def index
       @circuits = Circuit.all
+      render json: @circuits, each_serializer: CircuitSerializer
     end
 
     # GET /circuits/1 or /circuits/1.json
@@ -18,33 +19,26 @@ class Api::V1::CircuitsController < ApplicationController
     def create
       @circuit = Circuit.new(circuit_params)
 
-      respond_to do |format|
-        if @circuit.save
-          render json: @circuit, status: :created
-        else
-          render json: { errors: @circuit.errors }, status: :unprocessable_entity
-        end
+      if @circuit.save
+        render json: @circuit, status: :created
+      else
+        render json: { errors: @circuit.errors }, status: :unprocessable_entity
       end
     end
 
     # PATCH/PUT /circuits/1 or /circuits/1.json
     def update
-      respond_to do |format|
-        if @circuit.update(circuit_params)
-          render json: @circuit
-        else
-          render json: { errors: @circuit.errors }, status: :unprocessable_entity
-        end
+      if @circuit.update(circuit_params)
+        render json: @circuit
+      else
+        render json: { errors: @circuit.errors }, status: :unprocessable_entity
       end
     end
 
     # DELETE /circuits/1 or /circuits/1.json
     def destroy
       @circuit.destroy!
-
-      respond_to do |format|
-        format.json { head :no_content }
-      end
+      head :no_content
     end
 
     private
