# app/serializers/lap_time_serializer.rb
@@ -1,5 +1,3 @@
 class LapTimeSerializer < ActiveModel::Serializer
-  attributes :id, :lap_number, :time_ms
-  has_one :driver
-  has_one :circuit
+  attributes :id, :driver_id, :circuit_id, :lap_number, :time_ms, :created_at, :updated_at
 end
